--- a/index1.html
+++ b/index1.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Hablu vaiya
-    <p>Lorm ipsum dolor sit amet consectetur adipisicing elit. Quod, molestias provident! Distinctio minima, exercitationem quo non repellat doloremque impedit. Pariatur!</p>
-    <p>This is my first project in github</p>
+  <h1>I wanna change something in this project</h1>
 </body>
 </html>
